--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: ["9", "8"]
+        version: ["10", "9", "8"]
 
     steps:
       - name: Checkout repository
