--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       packages: write
     strategy:
       matrix:
-        version: ["9", "8"]
+        version: ["10", "9", "8"]
 
     steps:
       - name: Checkout repository
